--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://talkual_owner:F0BLrlbEVM3n@ep-still-snow-a5iz1peg.us-east-2.aws.neon.tech/talkual?sslmode=require"
+
 PORT="3001"
