--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "author": "Diego Matos",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.20.0",
+    "@vercel/node": "^3.2.18",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -18,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
